Adjust err message